--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Todo, Please! On Backbone.js</title>
-	<link rel="stylesheet" href="../app/assets/vendor/css/normalize.css">
-	<link rel="stylesheet" href="../app/assets/vendor/css/pure.css">
-	<link rel="stylesheet" href="../app/assets/custom/css/application.css">
+	<link rel="stylesheet" href="/assets/vendor/css/normalize.css">
+	<link rel="stylesheet" href="assets/vendor/css/pure.css">
+	<link rel="stylesheet" href="/assets/custom/css/application.css">
 </head>
 <body>
-	<script src="../app/assets/vendor/javascript/jquery.js"></script>
-	<script src="../app/assets/vendor/javascript/underscore.js"></script>
-	<script src="../app/assets/vendor/javascript/backbone.js"></script>
+	<script src="/assets/vendor/javascript/jquery.js"></script>
+	<script src="/assets/vendor/javascript/underscore.js"></script>
+	<script src="/assets/vendor/javascript/backbone.js"></script>
 </body>
 </html>
