files now have the right path in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Todo, Please! On Backbone.js</title>
 	<link rel="stylesheet" href="/assets/vendor/css/normalize.css">
-	<link rel="stylesheet" href="assets/vendor/css/pure.css">
+	<link rel="stylesheet" href="/assets/vendor/css/pure.css">
 	<link rel="stylesheet" href="/assets/custom/css/application.css">
 </head>
 <body>
+	<script src="/assets/custom/javascript/customPageLayOut.js"></script>
 	<script src="/assets/vendor/javascript/jquery.js"></script>
 	<script src="/assets/vendor/javascript/underscore.js"></script>
 	<script src="/assets/vendor/javascript/backbone.js"></script>
