--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,32 @@
 	<link rel="stylesheet" href="/assets/custom/css/application.css">
 </head>
 <body>
-	<script src="/assets/custom/javascript/customPageLayOut.js"></script>
+
+	<div class="pure-g">
+		<div class="pure-u-1-8">
+			<div class="pure-menu side-menu-custom">
+		    <span class="pure-menu-heading underline">Todo, Please!</span>
+
+		    <ul class="pure-menu-list">
+		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Flickr</a></li>
+		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Messenger</a></li>
+		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sports</a></li>
+		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Finance</a></li>
+		        <li class="pure-menu-heading underline">More Sites</li>
+		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Games</a></li>
+		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">News</a></li>
+		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">OMG!</a></li>
+		    </ul>
+			</div>
+		</div>
+		<div class="pure-u-7-8">
+			<p>This is 7/8</p>
+		</div>
+	</div>
+
 	<script src="/assets/vendor/javascript/jquery.js"></script>
 	<script src="/assets/vendor/javascript/underscore.js"></script>
 	<script src="/assets/vendor/javascript/backbone.js"></script>
+	<script src="/assets/custom/javascript/customPageLayOut.js"></script>
 </body>
 </html>
