--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framwork="backbonejs">
 <head>
 	<meta charset="UTF-8">
-	<title>Todo, Please! On Backbone.js</title>
+	<title>Todo, Please. On Backbone.js</title>
 	<link rel="stylesheet" href="/assets/vendor/css/normalize.css">
 	<link rel="stylesheet" href="/assets/vendor/css/pure.css">
 	<link rel="stylesheet" href="/assets/custom/css/application.css">
@@ -10,24 +10,37 @@
 <body>
 
 	<div class="pure-g">
-		<div class="pure-u-1-8">
+		<div class="pure-u-1-8" id="menu">
 			<div class="pure-menu side-menu-custom">
-		    <span class="pure-menu-heading underline">Todo, Please!</span>
+		    <span class="pure-menu-heading">todo, please.</span>
 
 		    <ul class="pure-menu-list">
 		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Flickr</a></li>
 		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Messenger</a></li>
 		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Sports</a></li>
 		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Finance</a></li>
-		        <li class="pure-menu-heading underline">More Sites</li>
+		        <li class="pure-menu-heading">About Me</li>
 		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Games</a></li>
 		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">News</a></li>
 		        <li class="pure-menu-item"><a href="#" class="pure-menu-link">OMG!</a></li>
 		    </ul>
 			</div>
 		</div>
-		<div class="pure-u-7-8">
-			<p>This is 7/8</p>
+		<div class="pure-u-7-8" id="body">
+			<div class="pure-g">
+				<div class="pure-u-1-4"></div>
+				
+				<div class="pure-u-1-2">
+						<div class="text-center">
+							<h1 class='header'>todo, please.</h1>
+						</div>
+					<div class="layer-paper">
+						div.
+					</div>
+				</div>
+				
+				<div class="pure-u-1-4"></div>
+			</div>
 		</div>
 	</div>
 
