--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="/assets/vendor/css/normalize.css">
 	<link rel="stylesheet" href="/assets/vendor/css/pure.css">
 	<link rel="stylesheet" href="/assets/custom/css/application.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -31,12 +32,40 @@
 				<div class="pure-u-1-4"></div>
 				
 				<div class="pure-u-1-2">
-						<div class="text-center">
-							<h1 class='header'>todo, please.</h1>
+					<div class="text-center">
+						<h1 class='header'>todo, please.</h1>
+					</div>
+					<div class="yellow-notebook-page">
+						<div id="input-box-new-todo">
+							<div class="inline-element margin-left-20 margin-right-20 transparent-1-4">
+								<i class="fa fa-chevron-circle-down fa-lg"></i>
+							</div>
+							<input id="new-todo" class='inline-element' placeholder="What needs to be done?" autofocus>
+						</div>
+						<div class="todo-item blue-border-bottom">
+							<div class="pure-g center-todo">
+								<div class="pure-u-1-8"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
+								<div class="pure-u-3-4 overflow-todo">This element is very important to complete</div>
+								<div class="pure-u-1-8"></div>
+							</div>
+							<!-- <div class="transparent-1-4 margin-left-20 margin-right-20 center-todo">
+								<i class="fa fa-circle-thin fa-lg"></i>
+							</div>
+							<div class="inline-element">
+								<p class="inline-element">This element is very important to complete</p>
+							</div> -->
+						</div>
+						<div class="todo-footer">
+							<ul class="remove-bullets text-center helveticaneue">
+								<li class="inline-element margin-right-20">All</li>
+								<li class="inline-element margin-right-20">Active</li>
+								<li class="inline-element">Incomplete</li>
+							</ul>
 						</div>
 					<div class="layer-paper">
-						div.
+						<br>
 					</div>
+				</div>
 				</div>
 				
 				<div class="pure-u-1-4"></div>
