--- a/public/index.html
+++ b/public/index.html
@@ -42,19 +42,7 @@
 							</div>
 							<input id="new-todo" class='inline-element' placeholder="What needs to be done?" autofocus>
 						</div>
-						<div class="todo-item blue-border-bottom">
-							<div class="pure-g center-todo">
-								<div class="pure-u-1-8"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
-								<div class="pure-u-3-4 overflow-todo">This element is very important to complete</div>
-								<div class="pure-u-1-8"></div>
-							</div>
-							<!-- <div class="transparent-1-4 margin-left-20 margin-right-20 center-todo">
-								<i class="fa fa-circle-thin fa-lg"></i>
-							</div>
-							<div class="inline-element">
-								<p class="inline-element">This element is very important to complete</p>
-							</div> -->
-						</div>
+
 						<div class="todo-footer">
 							<ul class="remove-bullets text-center helveticaneue">
 								<li class="inline-element margin-right-20">All</li>
@@ -72,7 +60,15 @@
 			</div>
 		</div>
 	</div>
-
+	<script type="text/template" id="item-template">
+		<div class="todo-item blue-border-bottom">
+			<div class="pure-g center-todo">
+				<div class="pure-u-1-8"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
+				<div class="pure-u-3-4 overflow-todo">This element is very important to complete</div>
+				<div class="pure-u-1-8"></div>
+			</div>
+		</div>
+	</script>
 	<script src="/assets/vendor/javascript/jquery.js"></script>
 	<script src="/assets/vendor/javascript/underscore.js"></script>
 	<script src="/assets/vendor/javascript/backbone.js"></script>
