made backbone folders and starting to put together scripts for models

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,8 @@
 	<script src="/assets/vendor/javascript/jquery.js"></script>
 	<script src="/assets/vendor/javascript/underscore.js"></script>
 	<script src="/assets/vendor/javascript/backbone.js"></script>
+	<script type="/assets/custom/javascript/backbone/models/todo.js"></script>
+	<script type="/assets/custom/javascript/backbone/app.js"></script>
 	<script src="/assets/custom/javascript/customPageLayOut.js"></script>
 </body>
 </html>
