--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
 				<div class="pure-u-1-8"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
-				<div class="pure-u-3-4 overflow-todo">This element is very important to complete</div>
+				<div class="pure-u-3-4 overflow-todo"><span><%=title%></span></div>
 				<div class="pure-u-1-8"></div>
 			</div>
 		</div>
