--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
 	<script src="/assets/vendor/javascript/underscore.js"></script>
 	<script src="/assets/vendor/javascript/backbone.js"></script>
 	<script src="/assets/custom/javascript/backbone/models/todo.js"></script>
+	<script src="/assets/custom/javascript/backbone/collections/todos.js"></script>
 	<script src="/assets/custom/javascript/backbone/app.js"></script>
 	<script src="/assets/custom/javascript/customPageLayOut.js"></script>
 </body>
