--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-	<div class="pure-g">
+	<div class="pure-g" id="maingrid">
 		<div class="pure-u-1-8" id="menu">
 			<div class="pure-menu side-menu-custom">
 		    <span class="pure-menu-heading">todo, please.</span>
@@ -54,8 +54,11 @@
 						<br>
 					</div>
 				</div>
+				<br>
+				<div class="text-center toggle-menu-button">
+					<button class="pure-button primary-button" id="toggle-menu-button">Toggle Menu</button>
 				</div>
-				
+				</div>
 				<div class="pure-u-1-4"></div>
 			</div>
 		</div>
