--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,16 @@
 							</div>
 							<input id="new-todo" class='inline-element' placeholder="What needs to be done?" autofocus>
 						</div>
+						
+						<div class="empty">
+							<!-- <div class="todo-item blue-border-bottom">
+								<div class="pure-g center-todo">
+									<div class="pure-u-1-8"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
+									<div class="pure-u-3-4"></div>
+									<div class="pure-u-1-8"></div>
+								</div>
+							</div> -->
+						</div>
 
 						<div class="todo-footer">
 							<ul class="remove-bullets text-center helveticaneue">
@@ -58,6 +68,8 @@
 				<div class="text-center toggle-menu-button">
 					<button class="pure-button primary-button" id="toggle-menu-button">Toggle Menu</button>
 				</div>
+
+
 				</div>
 				<div class="pure-u-1-4"></div>
 			</div>
@@ -67,7 +79,7 @@
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
 				<div class="pure-u-1-8"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
-				<div class="pure-u-3-4 overflow-todo"><span><%=title%></span></div>
+				<div class="pure-u-3-4"><span><%=description%></span></div>
 				<div class="pure-u-1-8"></div>
 			</div>
 		</div>
@@ -78,6 +90,8 @@
 	<script src="/assets/custom/javascript/backbone/models/todo.js"></script>
 	<script src="/assets/custom/javascript/backbone/collections/todos.js"></script>
 	<script src="/assets/custom/javascript/backbone/app.js"></script>
+	<script src="/assets/custom/javascript/backbone/views/todos.js"></script>
+	<script src="/assets/custom/javascript/backbone/views/app.js"></script>
 	<script src="/assets/custom/javascript/customPageLayOut.js"></script>
 </body>
 </html>
