--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 							<input id="new-todo" class='inline-element' placeholder="What needs to be done?" autofocus>
 						</div>
 						
-						<div class="empty">
+						<div id="todo-list-items">
 							<!-- <div class="todo-item blue-border-bottom">
 								<div class="pure-g center-todo">
 									<div class="pure-u-1-8"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
