consolidated code for making todos look completed

--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
 		</div>
 		<div class="pure-u-7-8" id="body">
 			<div class="pure-g">
-				<div class="pure-u-1-4"></div>
+				<div class="pure-u-1-5"></div>
 				
-				<div class="pure-u-1-2" id='todoapp'>
+				<div class="pure-u-3-5" id='todoapp'>
 					<div class="text-center">
 						<h1 class='header'>todo, please.</h1>
 					</div>
@@ -68,16 +68,15 @@
 
 
 				</div>
-				<div class="pure-u-1-4"></div>
+				<div class="pure-u-1-5"></div>
 			</div>
 		</div>
 	</div>
 	<script type="text/template" id="item-template">
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
-				<div class="pure-u-1-8 toggle-done"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></div>
-				<div class="pure-u-3-4"><span class="edit-item edit-description"><%=description%></span></div>
-				<div class="pure-u-1-8"></div>
+				<div class="pure-u-1-8 toggle-done"><a href="#"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></a></div>
+				<div class="pure-u-7-8"><span class="current-item-description edit-description"><%=description%></span></div>
 			</div>
 		</div>
 	</script>
