--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
 				<div class="pure-u-1-8 toggle-done"><a href="#"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></a></div>
-				<div class="pure-u-7-8"><span class="current-item-description edit-description"><%=description%></span></div>
+				<div class="description-container pure-u-7-8"><span class="current-item-description edit-description"><%=description%></span></div>
 			</div>
 		</div>
 	</script>
