fixed hover hand for a tags, css for button

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 	<script type="text/template" id="item-template">
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
-				<div class="pure-u-1-8 toggle-done"><a href="#"><i class="fa fa-circle-thin margin-left-20 margin-right-20 transparent-1-4"></i></a></div>
+				<div class="pure-u-1-8 toggle-done"><a class='margin-left-20 margin-right-20' href='/#'><i class="fa fa-square-o transparent-1-4"></i></a></div>
 				<div class="description-container pure-u-7-8"><span class="current-item-description edit-description"><%=description%></span></div>
 			</div>
 		</div>
