fixing the show all done else don't show that symbol

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 					<div class="yellow-notebook-page">
 						<div id="input-box-new-todo">
 							<div class="inline-element margin-left-20 margin-right-20 transparent-1-4">
-								<i class="fa fa-chevron-circle-down fa-lg"></i>
+								<a href="/#"><i id='toggle-all' class="fa fa-circle-o fa-lg"></i></a>
 							</div>
 							<input id="new-todo" class='inline-element' placeholder="What needs to be done?" autofocus>
 						</div>
