Buttons for delete now are on page but not functional

--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
 				<div class="pure-u-1-8 toggle-done"><a class='margin-left-20 margin-right-20' href='/#'><i class="fa fa-square-o transparent-1-4"></i></a></div>
-				<div class="description-container pure-u-7-8"><span class="current-item-description edit-description"><%=description%></span></div>
+				<div class="description-container pure-u-7-8"><span class="current-item-description edit-description"><%=description%></span><button class="button-xsmall pure-button button-error float-right margin-right-10 transparent-1-4 hide"><i class="fa fa-trash-o"></i></button></div>
 			</div>
 		</div>
 	</script>
