some things have been fixed i am getting tired... so fuck it

--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,9 @@
 
 						<div class="todo-footer">
 							<ul class="remove-bullets text-center helveticaneue">
-								<li class="inline-element margin-right-20">All</li>
-								<li class="inline-element margin-right-20">Active</li>
-								<li class="inline-element">Incomplete</li>
+								<li class="inline-element margin-right-20"> <a class="selected" href="#/">All</a></li>
+								<li class="inline-element margin-right-20"> <a class="active" href="#/active">Active</a> </li>
+								<li class="inline-element"><a href="#/completed">Completed</a></li>
 							</ul>
 						</div>
 					<div class="layer-paper">
