Removed repeating todos, added button

--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,10 @@
 
 						<div class="todo-footer">
 							<ul class="remove-bullets text-center helveticaneue">
-								<li class="inline-element margin-right-20"> <a class="selected" href="#/">All</a></li>
-								<li class="inline-element margin-right-20"> <a class="active" href="#/active">Active</a> </li>
-								<li class="inline-element"><a href="#/completed">Completed</a></li>
+								<li class="inline-element margin-right-20"> <a class="selected filters" href="#/">All</a></li>
+								<li class="inline-element margin-right-20"> <a class="filters active" href="#/active">Active</a> </li>
+								<li class="inline-element margin-right-20"><a class="filters" href="#/completed">Completed</a></li>
+								<li class="inline-element"> <button id='clear-completed' class="pure-button button-secondary">Clear Completed </button> </li>
 							</ul>
 						</div>
 					<div class="layer-paper">
