finished with todo version 1

--- a/public/index.html
+++ b/public/index.html
@@ -51,12 +51,7 @@
 						</div>
 
 						<div class="todo-footer">
-							<ul class="remove-bullets text-center helveticaneue">
-								<li class="inline-element margin-right-20"> <a class="selected filters" href="#/">All</a></li>
-								<li class="inline-element margin-right-20"> <a class="filters active" href="#/active">Active</a> </li>
-								<li class="inline-element margin-right-20"><a class="filters" href="#/completed">Completed</a></li>
-								<li class="inline-element"> <button id='clear-completed' class="pure-button button-secondary">Clear Completed </button> </li>
-							</ul>
+							
 						</div>
 					<div class="layer-paper">
 						<br>
@@ -73,6 +68,13 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/template" id='footer-template'>
+		<ul class="remove-bullets text-center helveticaneue" id="filters">
+			<% if (completed) {%>
+			<li class="inline-element"> <button id='clear-completed' class="pure-button button-secondary">Clear Completed (<%completed%>) </button></li>
+			<% } %>
+		</ul>
+	</script>
 	<script type="text/template" id="item-template">
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
