--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,7 @@
 	<script src="/assets/vendor/javascript/underscore.js"></script>
 	<script src="/assets/vendor/javascript/backbone.js"></script>
 	<script src="/assets/custom/javascript/backbone/models/todo.js"></script>
+	<script src="/assets/custom/javascript/backbone/models/user.js"></script>
 	<script src="/assets/custom/javascript/backbone/collections/todos.js"></script>
 	<script src="/assets/custom/javascript/backbone/app.js"></script>
 	<script src="/assets/custom/javascript/backbone/views/todos.js"></script>
