--- a/public/index.html
+++ b/public/index.html
@@ -67,15 +67,8 @@
 				<div class="pure-u-1-5"></div>
 			</div>
 		</div>
-	</div>
+	</div>	
 
-	<script type="text/template" id='footer-template'>
-		<ul class="remove-bullets text-center helveticaneue" id="filters">
-			<% if (completed) {%>
-			<li class="inline-element"> <button id='clear-completed' class="pure-button button-secondary">Clear Completed (<%completed%>) </button></li>
-			<% } %>
-		</ul>
-	</script>
 	<script type="text/template" id="item-template">
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
@@ -84,10 +77,42 @@
 			</div>
 		</div>
 	</script>
+	<script type="text/template" id="signin">
+		<div id="signin">
+			<div class="text-center">
+			<h1 class='header'>sign in for. todo, please.</h1>
+			</div>
+			<div class="pure-g">
+				<div class="pure-u-1-3"></div>
+				<div class="pure-u-1-3">
+					<form class="pure-form pure-form-aligned">
+						<fieldset>
+							<div class="pure-control-group">
+								<label for="email">Email</label>
+								<input id="email" type="email" placeholder="Email, please."></input>
+							</div>
+							<div class="pure-control-group">
+								<label for="password">Password</label>
+								<input id="password" type="password" placeholder="Password, please."></input>
+							</div>	
+							<div class="pure-g">
+								<div class="pure-u-1-3"></div>
+								<div class="pure-u-1-3">
+									<button type="submit" class="pure-button pure-button-primary">Submit</button>
+								</div>
+								<div class="pure-u-1-3"></div>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+				<div class="pure-u-1-3"></div>
+			</div>
+		</div>
+	</script>
 	<script type="text/template" id="signup">
 		<div id="signup">
 			<div class="text-center">
-				<h1 class='header'>todo, please.</h1>
+				<h1 class='header'>sign up for todo, please.</h1>
 			</div>
 			<div class="pure-g">
 				<div class="pure-u-1-3"></div>
@@ -121,6 +146,8 @@
 				<div class="pure-u-1-3"></div>
 			</div>
 		</div>
+	</script>
+	<script type="text/template" id="signin">
 	</script>
 	<script src="/assets/vendor/javascript/jquery.js"></script>
 	<script src="/assets/vendor/javascript/underscore.js"></script>
