--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,12 @@
 		</div>
 	</div>
 
+
+	<script type="text/template" id="logout">
+		    <% if (sessionStorage.length >= 1) { %>
+		    	<li class="pure-menu-item"><a href="#" class="pure-menu-link"> Logout </a></li>
+		  	<%} %>
+	</script>
 	<script type="text/template" id="item-template">
 		<div class="todo-item blue-border-bottom">
 			<div class="pure-g center-todo">
