--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 	<script type="text/template" id="signin">
 		<div id="signin">
 			<div class="text-center">
-			<h1 class='header'>sign in for. todo, please.</h1>
+			<h1 class='header'>sign in for todo, please.</h1>
 			</div>
 			<div class="pure-g">
 				<div class="pure-u-1-3"></div>
@@ -122,7 +122,7 @@
 							<div class="pure-g">
 								<div class="pure-u-1-3"></div>
 								<div class="pure-u-1-3">
-									<button type="submit" class="pure-button pure-button-primary">Submit</button>
+									<button type="submit" id="signin-submit-button" class="pure-button pure-button-primary">Submit</button>
 								</div>
 								<div class="pure-u-1-3"></div>
 							</div>
@@ -180,6 +180,7 @@
 	<script src="assets/custom/javascript/backbone/collections/todos.js"></script>
 	<script src="assets/custom/javascript/backbone/views/loginbuttons.js"></script>
 	<script src="assets/custom/javascript/backbone/views/todos.js"></script>
+	<script src="assets/custom/javascript/backbone/views/signin.js"></script>
 	<script src="assets/custom/javascript/backbone/views/app.js"></script>
 	<script src="assets/custom/javascript/backbone/app.js"></script>
 	<script src="assets/custom/javascript/backbone/mixins.js"></script>
