--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 	<script type="text/template" id="signin">
 		<div id="signin">
 			<div class="text-center">
-			<h1 class='header'>sign in for todo, please.</h1>
+			<h1 class='header margin-bottom-15'><span class="black-text">sign in for </span> todo, please.</h1>
 			</div>
 			<div class="pure-g">
 				<div class="pure-u-1-3"></div>
