user can now sign in and logout

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 
 		    <ul class="pure-menu-list">
 		        <li class="pure-menu-item"><a href="https://github.com/cghil/rails-todo-api" class="pure-menu-link"> About </a></li>
+		       	<li class="pure-menu-item"><a id="logout" href="#" class="pure-menu-link"> Logout </a></li>
 		        <li class="pure-menu-heading custom-menu-header">Useful Links</li>
 		        <li class="pure-menu-item"><a href="https://miguelmota.com/blog/getting-started-with-backbonejs/" class="pure-menu-link">Getting Started w/ Backbone</a></li>
 		        <li class="pure-menu-heading custom-menu-header">About Me</li>
