making the logout work better

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="pure-u-7-8" id="body">
 			<div class="pure-g">
-				<div class="pure-u-1-5"></div>
+				<div id="insert-app-below" class="pure-u-1-5"></div>
 				
 				<div class="pure-u-3-5" id='todoapp'>
 					<div class="text-center">
