--- a/public/index.html
+++ b/public/index.html
@@ -142,7 +142,7 @@
 			</div>
 			<div class="pure-g">
 				<div class="pure-u-1-3"></div>
-				<div class="pure-u-1-3">
+				<div class="pure-u-1-3" id="form-holder">
 					<form class="pure-form pure-form-aligned">
 						<fieldset>
 							<div class="pure-control-group">
